<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Fragment.GeofenceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="311dp"
            app:srcCompat="@drawable/geofence" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geofence_title"
            android:textColor="#222831"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geofence_text" />

        <Switch
            android:id="@+id/geodfence_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GEOFENCE" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/geofence_list"/>

    </LinearLayout>

</FrameLayout>